// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery component that it renders with a custom column class 1`] = `
<Unknown>
  <div
    className="row"
  >
    <div
      className="col-md-3 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image001.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image002.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image003.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image004.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image005.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
  </div>
</Unknown>
`;

exports[`Gallery component that it renders with data in images & thumbs 1`] = `
<Unknown>
  <div
    className="row"
  >
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image001.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image002.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image003.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image004.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image005.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
  </div>
</Unknown>
`;

exports[`Gallery component that it renders with data in images 1`] = `
<Unknown>
  <div
    className="row"
  >
    
  </div>
</Unknown>
`;

exports[`Gallery component that it renders with data in thumbs 1`] = `
<Unknown>
  <div
    className="row"
  >
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image001.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image002.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image003.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image004.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
    <div
      className="col-md-3 col-sm-6 px-0"
      onClick={[Function]}
    >
      <div
        className="m-1"
      >
        <Image
          Tag="div"
          alt=""
          className="rounded"
          durationFadeIn={500}
          fadeIn={true}
          fluid={
            Object {
              "fluid": Object {
                "aspectRatio": 1.5,
                "base64": "string_of_base64",
                "sizes": "(max-width: 600px) 100vw, 600px",
                "src": "/thumb/image005.jpg",
                "srcSet": "some srcSet",
                "srcSetWebp": "some srcSetWebp",
              },
            }
          }
          loading="lazy"
        />
      </div>
    </div>
  </div>
</Unknown>
`;

exports[`Gallery component that it renders with empty props 1`] = `
<Unknown>
  <div
    className="row"
  >
    
  </div>
</Unknown>
`;
